[package]
name = "pganalyzer"
version = "0.1.0"
edition = "2021"
authors = ["Anthonin Bonnefoy <anthonin.bonnefoy@datadoghq.com>"]
description = "A PostgreSQL WAL analyzer CLI tool"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
colored = "2.0"
byteorder = "1.4"
thiserror = "1.0"
tempfile = "3.8"
nom = "8.0.0"

[[bin]]
name = "pganalyzer"
path = "src/main.rs"
