[package]
name = "wal_analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Anthonin Bonnefoy <anthonin.bonnefoy@proton.me>"]
description = "A PostgreSQL WAL analyzer CLI tool"
license = "MIT"

include = [
  "README.md",
  ".gitignore",
  "Cargo.toml",
  "src/*.rs",
  "src/xlog/*.rs",
  "tests/*.rs",
  "tests/xlog/*.rs"
]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
colored = "2.0"
byteorder = "1.4"
thiserror = "1.0"
tempfile = "3.8"
nom = "8.0.0"
hex-literal = "1.0.0"
log = "0.4.27"
env_logger = "0.11.8"
ctor = "0.4.1"
nom-language = "0.1.0"

[[bin]]
name = "wal_analyzer"
path = "src/main.rs"
