[package]
name = "inspect"
version = "0.1.0"
edition = "2024"

[dependencies]
bitter = "0.8.0"
bitvec = "1.0.1"
env_logger = "0.11.8"
itertools = "0.14.0"
log = "0.4.27"
nom = "8.0.0"
nom-language = "0.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
struple = "0.2.0"
thiserror = "2.0.18"

[dev-dependencies]
pretty_assertions = "1.4.1"
ctor = "0.5.0"
